syntax="proto3";
option go_package = ".;number";
package number;

service OprationNumberService{
    rpc AddNumberAsync(AddNumberRequest) returns(AddNumberResponse);
    rpc TestStreamSendRequestAsync(stream StreamRequest) returns(stream StreamResponse);
}

message AddNumberRequest{
    int32 First=1;
    int32 Second=2;
}

message AddNumberResponse{
    int32 Num=1;
}

message StreamRequest{
	string Question=1;
}

message StreamResponse{
	string Answer =1;
}